--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -208,7 +208,7 @@ Mechanic.",
   author  = "B Cockburn and C Johnson and C Shu and E Tadmor",
   journal = "Lecture Notes in Mathematics",
   volume  = "1697",
-  #pages   = "97–109",
+%  pages   = "97-109",
   year    = "1998",
   }
 
@@ -217,23 +217,17 @@ Mechanic.",
   author  = "B Cockburn and G Karniadakis and C Shu",
   journal = "Lecture Notes in Computer Science and Engineering",
   volume  = "11",
-  #pages   = "97–109",
+%  pages   = "97-109",
   year    = "2000",
   }
 
-@book{CompressionCorner,
-  title   = "Modern Compressible Flow: With Historical Perspective",
-  author = "J Anderson",
-  year      = "1982",
-  publisher = "McGraw-Hill Science Engineering",
-  }
   
 @article{nozzle_exact,
   title   = "Liquid and liquid-gas flows at all speeds: Reference solutions and numerical schemes.",
   author  = "S LeMartelot and B Nkonga and R Saurel",
-  journal = "Research report",
+  journal = "Research report \tcr{why not cite their jcp-2013?}",
   volume  = "7935",
-  #pages   = "97–109",
+%  pages   = "97–109",
   year    = "2012",
   }
 
